Spacing fixes for Totals

--- a/public/assets/less/style.less
+++ b/public/assets/less/style.less
@@ -44,10 +44,6 @@ table tr:last-child {
     border-bottom: 0 !important;
 }
 
-.card-subtitle {
-    font-size: 18px;
-}
-
 .material-badge {
     min-width: 3rem;
     padding: 1px 12px;
@@ -101,4 +97,8 @@ table tr:last-child {
 
 .simulated-table-row:last-child {
     border-bottom: 0;
+}
+
+.metric i {
+    display: inline-block !important;
 }
